# vertica

./: .dockerignore  Dockerfile.mcp  Makefile  PROMPTS.md  README.md  docker-compose.yml  pyproject.toml  pytest.ini  ruff.toml  smithery.yaml
.github/workflows/: cicd.yml  db-apply-destroy.yml  deploy.yml  mcp-apply-destroy.yml
deploy/db/: README.md
deploy/db/terraform/: backend-bootstrap.sh  main.tf  outputs.tf  user_data_db.sh  variables.tf
deploy/mcp/: README.md
deploy/mcp/terraform/: main.tf  outputs.tf  user_data_mcp.sh  variables.tf
infra/: backend-bootstrap.sh  backend.tf  compose.remote.yml  main.tf  outputs.tf  terraform.tfvars.example  user_data.sh  userdata.sh  variables.tf
scripts/: seed_itsm.py  ssm_smoke.sh  wait-for-port.py
sql/: __init__.py  ci_facts_container.sql  ci_facts_node.sql  ci_facts_pod.sql  ci_facts_security_7d.sql  cis_for_business_service_events.sql  cis_for_business_service_view.sql  collection_for_ci.sql  collection_members_containers.sql  collection_members_nodes.sql  collection_members_pods.sql  get_event_application.sql  get_event_ci.sql  get_version.sql  gke_identify_application_pod.sql  gke_identify_pod_cluster.sql  gke_identify_pod_node.sql  itsm_schema.sql  list_indexes.sql  list_views.sql  repeat_issues.sql  search_columns.sql  search_tables.sql  security_alerts_last7d.sql
src/mcp_vertica/: __init__.py  __main__.py  connection.py  health.py  mcp.py  nlp.py  rest.py  server.py  sql_loader.py
tests/: conftest.py  test_connection_pool.py  test_health.py  test_mcp_lifespan.py  test_sql_exists.py  test_sql_files.py  test_sql_rendering.py  test_synthesize_and_load.py  test_utils.py
