[project]
name = "mcp-vertica"
version = "0.2.0"
description = "Vertica MCP using Fast MCP"
requires-python = ">=3.12"
dependencies = [
    "vertica-python>=1.0.0",
    "click>=8.1",
    "python-dotenv>=1.0",
    "mcp[cli]",
    "starlette>=0.37",
    "uvicorn[standard]>=0.29",
    "sqlparse>=0.5.3",
    "pytest>=8.3",
    "ruff>=0.6",
]

[[project.authors]]
name = "nolleh"
email = "nolleh7707@gmail.com"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_vertica"]

[tool.hatch.build.targets.sdist]
include = [
    "src/mcp_vertica",
    "pyproject.toml",
    "uv.lock",
    "README.md",
]

[project.scripts]
mcp-vertica = "mcp_vertica:cli"
