[project]
name = "mcp-vertica"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "mcp>=1.8.0",
  "fastapi>=0.114.0",
  "uvicorn>=0.30.0",
  "vertica-python>=1.4.0",
  "jinja2>=3.1.4",
  "pydantic>=2.6.0",
  "tenacity>=9.0.0",
  "pytest>=8.0.0"
]

[project.scripts]
mcp-vertica = "mcp_vertica.server:main"
